test/sh/error/func/proto_return_bad_type.sk
f() does_not_exist {
	# do nothing
}